--- a/AdvancedImmersiveMode/Application/src/main/AndroidManifest.xml
+++ b/AdvancedImmersiveMode/Application/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
      of "1.9" vs "1.10".  versionName, on the other hand, can be whatever you want, as the code
      that handles upgrading Android apps between versions on your device just ignores it.-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.advancedimmersivemode"
     android:versionCode="1"
     android:versionName="1.0">
@@ -32,9 +33,10 @@
     <!-- theme is a way of applying UI decisions across your entire application.  You can also
          define it on a per-application basis. -->
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
+        android:icon="@drawable/ic_launcher"
+        tools:ignore="AllowBackup">
 
         <!-- Every activity needs its own Manifest element.  The intent-filter contained in the
              element declares the intents that can be used to activate this Activity.  For instance,
