--- a/AdvancedImmersiveMode/build.gradle
+++ b/AdvancedImmersiveMode/build.gradle
@@ -1,10 +1,12 @@
-
-
-
-
-
-
-
-
-
-
+buildscript {
+    ext.kotlin_version = '1.4.31'
+    repositories {
+        google()
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
