--- a/AppShortcuts/app/src/main/AndroidManifest.xml
+++ b/AppShortcuts/app/src/main/AndroidManifest.xml
@@ -15,15 +15,18 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.appshortcuts">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:allowBackup="false"
         android:label="@string/app_name"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:resizeableActivity="true">
+        android:resizeableActivity="true"
+        tools:ignore="AllowBackup">
 
         <activity android:name="com.example.android.appshortcuts.Main">
             <intent-filter>
