--- a/AppShortcuts/app/src/main/AndroidManifest.xml
+++ b/AppShortcuts/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:resizeableActivity="true"
+        android:theme="@style/AppTheme"
         tools:ignore="AllowBackup">
 
         <activity android:name="com.example.android.appshortcuts.Main">
