--- a/WindowManager/app/build.gradle
+++ b/WindowManager/app/build.gradle
@@ -16,7 +16,6 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
@@ -46,5 +45,5 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.window:window:1.0.0-alpha04"
+    implementation 'androidx.window:window:1.0.0-alpha05'
 }
