Migrated to androidX and updated gradle dependencies in BasicImmersiveMode

--- a/BasicImmersiveMode/Application/src/main/AndroidManifest.xml
+++ b/BasicImmersiveMode/Application/src/main/AndroidManifest.xml
@@ -15,16 +15,18 @@
  limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.basicimmersivemode"
     android:versionCode="1"
     android:versionName="1.0">
 
     <!-- Min/target SDK versions (<uses-sdk>) managed by build.gradle -->
 
-    <application android:allowBackup="true"
+    <application android:allowBackup="false"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup">
 
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
