--- a/BasicImmersiveMode/build.gradle
+++ b/BasicImmersiveMode/build.gradle
@@ -1,10 +1,13 @@
+buildscript {
+    ext.kotlin_version = '1.4.32'
+    repositories {
+        google()
+        jcenter()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 
-
-
-
-
-
-
-
-
-
+}
