--- a/ClippingBasic/Application/src/main/AndroidManifest.xml
+++ b/ClippingBasic/Application/src/main/AndroidManifest.xml
@@ -18,14 +18,16 @@
 
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.clippingbasic"
     android:versionCode="1"
     android:versionName="1.0">
 
-    <application android:allowBackup="true"
+    <application android:allowBackup="false"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@android:style/Theme.Material.Light">
+        android:theme="@android:style/Theme.Material.Light"
+        tools:ignore="AllowBackup">
 
         <activity android:name=".MainActivity"
                   android:label="@string/app_name">
