--- a/DarkTheme/Application/src/main/AndroidManifest.xml
+++ b/DarkTheme/Application/src/main/AndroidManifest.xml
@@ -16,16 +16,18 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.darktheme"
     android:versionCode="1"
     android:versionName="1.0">
 
     <application
         android:name=".DarkThemeApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/DarkThemeApp">
+        android:theme="@style/DarkThemeApp"
+        tools:ignore="AllowBackup">
 
         <activity
             android:name=".MainActivity"
