--- a/DarkTheme/Application/build.gradle
+++ b/DarkTheme/Application/build.gradle
@@ -12,6 +12,8 @@ buildscript {
 
 apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-android'
+
 repositories {
     google()
     jcenter()
@@ -22,6 +24,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 // The sample build uses multiple directories to
