--- a/DarkTheme/build.gradle
+++ b/DarkTheme/build.gradle
@@ -14,3 +14,15 @@
 if(hasProperty('target') && target == 'android') {
   android.vectorDrawables.useSupportLibrary = true
 }
+buildscript {
+  ext.kotlin_version = '1.4.32'
+  repositories {
+    mavenCentral()
+    jcenter()
+    google()
+  }
+  dependencies {
+    classpath 'com.android.tools.build:gradle:4.1.3'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+  }
+}
