--- a/DarkTheme/Application/build.gradle
+++ b/DarkTheme/Application/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
@@ -42,6 +42,7 @@ android {
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 30
+        vectorDrawables.useSupportLibrary = true
     }
 
     compileOptions {
