--- a/DocumentCentricApps/Application/src/main/AndroidManifest.xml
+++ b/DocumentCentricApps/Application/src/main/AndroidManifest.xml
@@ -16,14 +16,16 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.documentcentricapps"
     android:versionCode="1"
     android:versionName="1.0">
 
-    <application android:allowBackup="true"
+    <application android:allowBackup="false"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup">
 
         <activity android:name="com.example.android.documentcentricapps.DocumentCentricActivity"
                   android:label="@string/app_name"
