--- a/DownloadableFonts/app/build.gradle
+++ b/DownloadableFonts/app/build.gradle
@@ -5,12 +5,12 @@ ext {
 }
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.example.android.downloadablefonts"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 30
     }
 
     buildTypes {
@@ -21,8 +21,10 @@ android {
     }
 
     dependencies {
-        compile "com.android.support:appcompat-v7:$supportLibVersion"
-        compile "com.android.support:design:$supportLibVersion"
-        compile "com.android.support:cardview-v7:$supportLibVersion"
+        implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+        implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+        implementation 'androidx.cardview:cardview:1.0.0'
+        implementation 'androidx.appcompat:appcompat:1.2.0'
+        implementation 'com.google.android.material:material:1.3.0'
     }
 }
