--- a/DownloadableFonts/app/build.gradle
+++ b/DownloadableFonts/app/build.gradle
@@ -1,8 +1,5 @@
 apply plugin: 'com.android.application'
-
-ext {
-    supportLibVersion = '26.0.1'
-}
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 30
@@ -27,4 +24,12 @@ android {
         implementation 'androidx.appcompat:appcompat:1.2.0'
         implementation 'com.google.android.material:material:1.3.0'
     }
+}
+dependencies {
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    google()
+    mavenCentral()
 }
