--- a/DownloadableFontsKotlin/app/build.gradle
+++ b/DownloadableFontsKotlin/app/build.gradle
@@ -1,17 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
-ext {
-    supportLibVersion = '26.1.0'
-}
-
 android {
-    compileSdkVersion 26
+    compileSdkVersion 30
 
     defaultConfig {
         applicationId "com.example.android.downloadablefonts"
         minSdkVersion 14
-        targetSdkVersion 26
+        targetSdkVersion 30
     }
 
     buildTypes {
@@ -22,9 +18,11 @@ android {
     }
 
     dependencies {
-        implementation "com.android.support:appcompat-v7:$supportLibVersion"
-        implementation "com.android.support:design:$supportLibVersion"
-        implementation "com.android.support:cardview-v7:$supportLibVersion"
+        implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+        implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+        implementation 'androidx.cardview:cardview:1.0.0'
+        implementation 'androidx.appcompat:appcompat:1.2.0'
+        implementation 'com.google.android.material:material:1.3.0'
     }
 }
 
@@ -32,6 +30,8 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
 }
 
