--- a/DragAndDropAcrossApps/DropTarget/src/main/AndroidManifest.xml
+++ b/DragAndDropAcrossApps/DropTarget/src/main/AndroidManifest.xml
@@ -17,10 +17,12 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.droptarget">
 
     <application android:label="DropTarget Sample"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        tools:ignore="AllowBackup">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
