--- a/DragAndDropAcrossApps/build.gradle
+++ b/DragAndDropAcrossApps/build.gradle
@@ -1,11 +1,3 @@
-
-allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
-}
-
 /*
  * Copyright 2016, The Android Open Source Project
  *
@@ -21,14 +13,22 @@ allprojects {
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-
-
-
-
-
-
-
-
-
-
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
+}
+buildscript {
+    ext.kotlin_version = '1.4.32'
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
