--- a/DragAndDropAcrossApps/DragSource/src/main/AndroidManifest.xml
+++ b/DragAndDropAcrossApps/DragSource/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
     <application
         android:icon="@mipmap/ic_launcher"
