--- a/ElevationDrag/Application/build.gradle
+++ b/ElevationDrag/Application/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 repositories {
     google()
@@ -22,6 +23,8 @@ dependencies {
         implementation 'androidx.legacy:legacy-support-v13:1.0.0'
         implementation 'androidx.cardview:cardview:1.0.0'
         implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 // The sample build uses multiple directories to
