--- a/ElevationDrag/build.gradle
+++ b/ElevationDrag/build.gradle
@@ -1,14 +1,12 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+buildscript {
+    ext.kotlin_version = '1.4.32'
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
