--- a/EmojiCompat/app/src/main/AndroidManifest.xml
+++ b/EmojiCompat/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 The Android Open Source Project
 
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,30 +13,31 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 -->
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.emojicompat">
 
-    <!-- Adding this meta-data will download the font when application is installed from
-        Google Play Store. This way the font will be downloaded and ready when your app starts
-        for the first time. -->
-    <meta-data android:name="fontProviderRequests" android:value="Noto Color Emoji Compat"/>
-
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.EmojiCompat"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+
+        <!-- Adding this meta-data will download the font when application is installed from
+        Google Play Store. This way the font will be downloaded and ready when your app starts
+        for the first time. -->
+        <meta-data
+            android:name="fontProviderRequests"
+            android:value="Noto Color Emoji Compat" />
 
         <activity
             android:name=".MainActivity"
             android:windowSoftInputMode="stateUnchanged">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
