Updated gradle dependencies in EmojiCompatKotlin

--- a/EmojiCompatKotlin/app/src/main/AndroidManifest.xml
+++ b/EmojiCompatKotlin/app/src/main/AndroidManifest.xml
@@ -21,12 +21,12 @@
 
     <application
         android:name=".EmojiCompatApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.EmojiCompat"
-        tools:ignore="GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
         <activity
             android:name=".MainActivity"
