--- a/ImmersiveMode/app/build.gradle
+++ b/ImmersiveMode/app/build.gradle
@@ -41,6 +41,6 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
-    implementation 'androidx.core:core-ktx:1.5.0-beta03'
+    implementation 'androidx.core:core-ktx:1.6.0-alpha02'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 }
