--- a/Notifications/Application/src/main/AndroidManifest.xml
+++ b/Notifications/Application/src/main/AndroidManifest.xml
@@ -15,16 +15,18 @@
  limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.android.wearable.wear.wearnotifications"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.android.wearable.wear.wearnotifications"
           android:versionCode="1"
           android:versionName="1.0">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppThemeOverride">
+        android:theme="@style/AppThemeOverride"
+        tools:ignore="AllowBackup">
 
         <activity android:name=".MainActivity">
             <intent-filter>
