--- a/Notifications/Shared/src/main/AndroidManifest.xml
+++ b/Notifications/Shared/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.wearable.wear.wearnotifications.common">
 
-    <application android:allowBackup="true" android:label="@string/app_name">
+    <application android:allowBackup="false" android:label="@string/app_name">
 
     </application>
 
