--- a/Notifications/Wearable/src/main/AndroidManifest.xml
+++ b/Notifications/Wearable/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2016 Google Inc.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -15,22 +14,27 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.android.wearable.wear.wearnotifications"
-          android:versionCode="1"
-          android:versionName="1.0">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.android.wearable.wear.wearnotifications"
+    android:versionCode="1"
+    android:versionName="1.0">
 
-    <uses-feature android:name="android.hardware.type.watch"/>
+    <uses-feature android:name="android.hardware.type.watch" />
     <!-- Required for Always-on. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <application android:allowBackup="true"
-                 android:icon="@mipmap/ic_launcher"
-                 android:label="@string/app_name"
-                 android:supportsRtl="true"
-                 android:theme="@android:style/Theme.Material">
+    <application
+        android:allowBackup="false"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@android:style/Theme.Material"
+        tools:ignore="AllowBackup">
 
         <!-- Let's Play Store know this app is standalone. -->
-        <meta-data android:name="com.google.android.wearable.standalone" android:value="true"/>
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
 
         <!--
         Important Note: Usually, you will want to disable bridging if you have a local/native
@@ -45,10 +49,13 @@
         -->
 
         <!--If you want your app to run on pre-22, then set required to false -->
-        <uses-library android:name="com.google.android.wearable" android:required="false" />
+        <uses-library
+            android:name="com.google.android.wearable"
+            android:required="false" />
 
-        <activity android:name=".StandaloneMainActivity"
-                  android:label="@string/app_name">
+        <activity
+            android:name=".StandaloneMainActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -59,41 +66,34 @@
         <activity
             android:name=".handlers.BigTextMainActivity"
             android:label="@string/title_activity_big_text_main"
-            android:taskAffinity="">
-        </activity>
+            android:taskAffinity=""></activity>
 
         <activity
             android:name=".handlers.BigPictureSocialMainActivity"
             android:label="@string/title_activity_big_picture_main"
-            android:taskAffinity="">
-        </activity>
+            android:taskAffinity=""></activity>
 
 
         <activity
             android:name=".handlers.InboxMainActivity"
             android:label="@string/title_activity_inbox_main"
-            android:taskAffinity="">
-        </activity>
+            android:taskAffinity=""></activity>
 
         <activity
             android:name=".handlers.MessagingMainActivity"
             android:label="@string/title_activity_messaging_main"
-            android:taskAffinity="">
-        </activity>
+            android:taskAffinity=""></activity>
 
         <service
             android:name=".handlers.BigTextIntentService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
 
         <service
             android:name=".handlers.MessagingIntentService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
 
         <service
             android:name=".handlers.BigPictureSocialIntentService"
-            android:exported="false">
-        </service>
+            android:exported="false"></service>
     </application>
 </manifest>
