--- a/PreferencesKotlin/app/src/main/AndroidManifest.xml
+++ b/PreferencesKotlin/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
           package="com.example.androidx.preference.sample">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/title"
         android:roundIcon="@mipmap/ic_launcher_round"
