--- a/SliceViewerKotlin/app/src/main/AndroidManifest.xml
+++ b/SliceViewerKotlin/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
  limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.sliceviewer"
     android:versionCode="1"
     android:versionName="1.0">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup">
 
         <activity
             android:name=".ui.list.SliceViewerActivity"
