--- a/TextLinkify/build.gradle
+++ b/TextLinkify/build.gradle
@@ -1,10 +1,12 @@
-
-
-
-
-
-
-
-
-
-
+buildscript {
+    ext.kotlin_version = '1.5.0'
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.2.0'
+        //noinspection DifferentKotlinGradleVersion
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
