--- a/TextRoundedBackgroundKotlin/app/src/main/AndroidManifest.xml
+++ b/TextRoundedBackgroundKotlin/app/src/main/AndroidManifest.xml
@@ -15,15 +15,17 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.android.example.text.styling.roundedbg.app">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.android.example.text.styling.roundedbg.app">
 
     <application
-            android:allowBackup="true"
+            android:allowBackup="false"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.RoundedBackground">
+            android:theme="@style/Theme.RoundedBackground"
+        tools:ignore="AllowBackup">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
