Updated to Android Studio 4.2 in AdvancedImmersiveMode

--- a/AdvancedImmersiveMode/Application/build.gradle
+++ b/AdvancedImmersiveMode/Application/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.2.0'
     }
 }
 
@@ -14,7 +14,7 @@ apply plugin: 'kotlin-android'
 
 repositories {
     google()
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
