Updated gradle dependencies in WindowManager

--- a/WindowManager/app/src/main/AndroidManifest.xml
+++ b/WindowManager/app/src/main/AndroidManifest.xml
@@ -16,13 +16,15 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.windowmanagersample">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup,MissingApplicationIcon">
         <activity android:name=".WindowDemosActivity"
             android:label="@string/window_manager_demos">
             <intent-filter>
