--- a/WindowManager/build.gradle
+++ b/WindowManager/build.gradle
@@ -15,14 +15,14 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.5.0'
+    ext.kotlin_version = '1.5.10'
     ext.ktlint_version = '0.40.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath 'com.android.tools.build:gradle:4.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -37,13 +37,16 @@ subprojects {
         kotlin {
             target '**/*.kt'
             ktlint(ktlint_version).userData(['android': 'true'])
+            //noinspection GroovyAccessibility
             licenseHeaderFile project.rootProject.file('scripts/copyright')
         }
         groovyGradle {
             target '**/*.gradle' // default target of groovyGradle
             // the Groovy Eclipse formatter extends the Java Eclipse formatter,
             // so it formats Java files by default (unless `excludeJava` is used).
+            //noinspection GroovyAccessibility
             greclipse().configFile(project.rootProject.file('scripts/greclipse.properties'))
+            //noinspection GroovyAccessibility
             licenseHeaderFile project.rootProject.file('scripts/copyright'), '(buildscript|apply)'
         }
     }
@@ -52,6 +55,6 @@ subprojects {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
