Updated gradle dependencies in WindowManager

--- a/WindowManager/app/src/main/AndroidManifest.xml
+++ b/WindowManager/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,MissingApplicationIcon">
+        tools:ignore="AllowBackup,DataExtractionRules,MissingApplicationIcon">
         <activity
             android:name=".WindowDemosActivity"
             android:exported="true"
