--- a/WindowManager/app/build.gradle
+++ b/WindowManager/app/build.gradle
@@ -41,12 +41,12 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 
-    def window_version = '1.0.0-beta04'
+    def window_version = '1.0.0'
     implementation "androidx.window:window:$window_version"
 
     androidTestImplementation 'junit:junit:4.13.2'
