--- a/WindowManager/build.gradle
+++ b/WindowManager/build.gradle
@@ -15,15 +15,15 @@
  */
 
 buildscript {
-    ext.kotlin_version = '1.6.0'
-    ext.coroutines_version = '1.5.0'
+    ext.kotlin_version = '1.6.10'
+    ext.coroutines_version = '1.6.0-native-mt'
     ext.ktlint_version = '0.40.0'
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
