Updated to chipmunk and targetSdkVersion 32 in InteractiveSliceProviderKotlin

--- a/InteractiveSliceProviderKotlin/app/src/main/AndroidManifest.xml
+++ b/InteractiveSliceProviderKotlin/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.android.interactivesliceprovider">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
