--- a/InteractiveSliceProviderKotlin/app/build.gradle
+++ b/InteractiveSliceProviderKotlin/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 32
     defaultConfig {
         applicationId "com.example.android.interactivesliceprovider"
         minSdkVersion 23
-        targetSdkVersion 31
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -25,6 +25,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.example.android.interactivesliceprovider'
 }
 
 dependencies {
@@ -38,7 +39,7 @@ dependencies {
     // implementation "androidx.slice:slice-builders:latest-version"
     implementation "androidx.slice:slice-builders-ktx:1.0.0-alpha6"
 
-    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
     implementation "com.google.firebase:firebase-appindexing:20.0.0"
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test:runner:1.4.0"
