Updated kotlin to 1.7.10 and added "exclude all" data-extraction-rules in AppWidget

--- a/AppWidget/app/src/main/AndroidManifest.xml
+++ b/AppWidget/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="false"
@@ -24,7 +23,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppWidget"
-        tools:ignore="DataExtractionRules">
+        android:dataExtractionRules="@xml/data_extraction_rules">
 
         <activity
             android:name=".ListWidgetConfigureActivity"
